--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Helllo World
+<html>
+    <head>
+        <title>Home Page</title>
+        <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico" rel="stylesheet"> 
+        <body>
+            <div>
+                <a href="#"><div class="tab"><p>Home</p></div></a>
+                <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
+                <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
+                <a href="gallery.html"><div class="tab"><p>My Gallery</p></div></a>
+            </div>
+            <div class="center">
+                <h3><span>Welcome</span> to my Website</h3>
+                <p>To know more about me, go through the website..contact me for any queries.</p>
+            </div>
+        </body>
+    </head>
+</html>
