--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <title>Home Page</title>
         <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico" rel="stylesheet"> 
         <body>
-            <div>
+            <div class="d-flex justify-content-around">
                 <a href="#"><div class="tab"><p>Home</p></div></a>
                 <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
                 <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
-                <a href="gallery.html"><div class="tab"><p>My Gallery</p></div></a>
+                <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
             </div>
             <div class="center">
                 <h3><span>Welcome</span> to my Website</h3>
