--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
             </div>
             <div class="center">
-                <h3><span>Welcome</span> to my Website</h3>
+                <h3><span>Welcome</span> to my Website</h3><br>
                 <p>To know more about me, go through the website..contact me for any queries.</p>
             </div>
         </body>
