--- a/contactme.html
+++ b/contactme.html
@@ -1,7 +1,9 @@
 <html>
     <body>
-        <p>Hello , for any queries, you can cotact me at</p>
-        <p>Email: tarunya7934@gmail.com</p>
-        <p>Phone Number: 78323457348</p>
+        <div>
+            <p>Hello , for any queries, you can cotact me at</p>
+            <p>Email: tarunya7934@gmail.com</p>
+            <p>Phone Number: 78323457348</p>
+        </div>
     </body>
 </html>
