--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
                 <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
             </div>
-            <div class="center">
+            <div class="d-flex flex-column align-items-center pt-2">
                 <h3><span>Welcome</span> to my Website</h3><br>
                 <p>To know more about me, go through the website..contact me for any queries.</p>
             </div>
