added background image

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,7 @@
 <html>
-    <body>
-        <p>Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
-    </body>
+    <div style="background-image: url('background.jpg');">
+        <body>
+            <p>Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
+        </body>
+    </div>
 </html>
