--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <html>
-    <div style="background-image: url('background.jpg');">
+    <div style="background-image: url('background1.jpg');">
         <body>
             <p>Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
         </body>
