added bg image to all pages

--- a/contactme.html
+++ b/contactme.html
@@ -1,9 +1,11 @@
 <html>
-    <body>
-        <div class="d-flex flex-column align-items-center">
-            <p>Hello , for any queries, you can cotact me at</p>
-            <p>Email: tarunya7934@gmail.com</p>
-            <p>Phone Number: 78323457348</p>
-        </div>
-    </body> 
+    <div style="background-image: url('wavy-blue-glitter.jpg');">
+        <body>
+            <div class="d-flex flex-column align-items-center">
+                <p>Hello , for any queries, you can cotact me at</p>
+                <p>Email: tarunya7934@gmail.com</p>
+                <p>Phone Number: 78323457348</p>
+            </div>
+        </body> 
+    </div>
 </html>
