--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <html>
-    <div style="background-image: url('wavy-blue-glitter.jpg');">
+    <div style="background-image: url('wavy-blue-glitter.jpg');" class="d-flex justify-content-center align-items-center h-100">
         <body>
-            <p>Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
+            <p class="">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
         </body>
     </div>
 </html>
