--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,6 @@
 <html>
-    <div style="background-image: url('wavy-blue-glitter.jpg');" class="d-flex justify-content-center align-items-center h-100">
+    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <div style="background-image: url('wavy-blue-glitter.jpg');" class="d-flex justify-content-center align-items-center h-100 textColor">
         <body>
             <p class="">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
         </body>
