--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,10 @@
 <html>
     <link type="text/css" rel="stylesheet" href="style.css"/>
-    <div style="background-image: url('wavy-blue-glitter.jpg');" class="d-flex justify-content-center align-items-center h-100 textColor">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <div class="h-100 textColor">
         <body>
-            <p class="">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso</p>
+            <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
+            <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
         </body>
     </div>
 </html>
