--- a/contactme.html
+++ b/contactme.html
@@ -1,5 +1,8 @@
 <html>
-    <div style="background-image: url('wavy-blue-glitter.jpg');">
+    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
         <body>
             <div class="d-flex flex-column align-items-center">
                 <p>Hello , for any queries, you can cotact me at</p>
