--- a/mygallery.html
+++ b/mygallery.html
@@ -6,6 +6,12 @@
         <div class="center">
 			<h3><div class="d-flex justify-content-center align-items-center pt-3">Gallery</div></h3>
 		</div>	
+        <div class="d-flex justify-content-around pt-2">
+            <a href="#"><div class="tab"><p>Home</p></div></a>
+            <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
+            <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
+            <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
+        </div>
 			<div class="row p-5">
 				<!--image 0-->
 				<div class="column"><img class="image" src="backgroun1.jpg"/></div>
