--- a/mygallery.html
+++ b/mygallery.html
@@ -3,13 +3,14 @@
     <body>
         <link type="text/css" rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <div class="head">
         <div class="d-flex justify-content-around pt-2">
             <a href="#"><div class="tab"><p>Home</p></div></a>
             <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
             <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
             <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
         </div>
-       
+        </div>
         <div class="center">
 			<h3><div class="d-flex justify-content-center align-items-center pt-3">Gallery</div></h3>
 		</div>	
