--- a/aboutme.html
+++ b/aboutme.html
@@ -6,13 +6,15 @@
 
             <div class="d-flex justify-content-around pt-2">
                 <a href="index.html"><div class="tab"><p>Home</p></div></a>
-                <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
+                <a href="#"><div class="tab"><p>About me</p></div></a>
                 <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
-                <a href="#"><div class="tab"><p>My Gallery</p></div></a>
+                <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
             </div>
-            
+
+            <div class="about">
             <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
             <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
+            </div>
         </body>
     </div>
 </html>
