--- a/contactme.html
+++ b/contactme.html
@@ -2,13 +2,21 @@
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <div class="d-flex justify-content-around pt-2">
+        <a href="index.html"><div class="tab"><p>Home</p></div></a>
+        <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
+        <a href="#"><div class="tab"><p>Contact me</p></div></a>
+        <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
+    </div>
     <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
         <body>
             <div class="d-flex flex-column align-items-center font-style">
                 <p>Hello , for any queries, you can contact me at</p>
                 <p>Email: tarunya7934@gmail.com</p>
                 <p>Phone Number: 78323457348</p>
+                <input type="button"
             </div>
         </body> 
     </div>
 </html>
+
