--- a/aboutme.html
+++ b/aboutme.html
@@ -2,14 +2,16 @@
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <div class="h-100 textColor">
-        <body>
-
+        <div class="ca">
             <div class="d-flex justify-content-around pt-2">
                 <a href="index.html"><div class="tab"><p>Home</p></div></a>
                 <a href="#"><div class="tab"><p>About me</p></div></a>
                 <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
                 <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
             </div>
+
+        </div>
+        <body>
 
             <div class="about">
             <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
