--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <html>
     <head>
-        <title>Home Page</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico" rel="stylesheet"> 
-        <body>
-            <div class="d-flex justify-content-around pt-2">
-                <a href="#"><div class="tab"><p>Home</p></div></a>
-                <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
-                <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
-                <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
+        <div style="background-image: url('wavy-blue-glitter.jpg');">
+            <title>Home Page</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico" rel="stylesheet"> 
+            <div class="ca">
+                    <div class="d-flex justify-content-around pt-2">
+                        <a href="index.html"><div class="tab"><p>Home</p></div></a>
+                        <a href="#"><div class="tab"><p>About me</p></div></a>
+                        <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
+                        <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
+                
+        
             </div>
-            <div class="d-flex flex-column align-items-center pt-2">
-                <h3><span>Welcome</span> to my Website</h3><br>
-                <p>To know more about me, go through the website..contact me for any queries.</p>
-            </div>
-        </body>
+            <body>
+                <div class="d-flex flex-column align-items-center pt-2">
+                    <h3><span>Welcome</span> to my Website</h3><br>
+                    <p>To know more about me, go through the website..contact me for any queries.</p>
+                </div>
+            </body>
+        </div>
     </head>
 </html>
