--- a/contactme.html
+++ b/contactme.html
@@ -10,12 +10,11 @@
     </div>
 </div>
     <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
-        <body>
+        <body class="about">
             <div class="d-flex flex-column align-items-center font-style">
                 <p>Hello , for any queries, you can contact me at</p>
                 <p>Email: tarunya7934@gmail.com</p>
                 <p>Phone Number: 78323457348</p>
-                <input type="button"
             </div>
         </body> 
     </div>
