--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
         </div>
         <body>
 
-            <div class="about">
+            <div>
             <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
             <div class="bg">
             <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
