--- a/contactme.html
+++ b/contactme.html
@@ -10,7 +10,7 @@
     </div>
 </div>
     <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
-        <body class="about">
+        <body>
             <div class="d-flex flex-column align-items-center font-style">
                 <p>Hello , for any queries, you can contact me at</p>
                 <p>Email: tarunya7934@gmail.com</p>
