--- a/aboutme.html
+++ b/aboutme.html
@@ -1,25 +1,24 @@
 <html>
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <div class="h-100 textColor">
-        <div class="ca">
-            <div class="d-flex justify-content-around pt-2">
-                <a href="index.html"><div class="tab"><p>Home</p></div></a>
-                <a href="#"><div class="tab"><p>About me</p></div></a>
-                <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
-                <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
-            </div>
-
-        </div>
+<div class=ca>
+    <div class="d-flex justify-content-around pt-2">
+        <a href="index.html"><div class="tab"><p>Home</p></div></a>
+        <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
+        <a href="#"><div class="tab"><p>Contact me</p></div></a>
+        <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
+    </div>
+</div>
+    <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
         <body>
-
+          
             <div>
-            <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
-            <div class="bg">
-            <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
-            </div>
-        </div>
-            </div>
-        </body>
+                <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1>
+                <div class="bg">
+                <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
+                </div>
+        </body> 
     </div>
 </html>
+
+        
