--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,7 @@
                 <div class="bg">
                 <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
                 </div>
+            </div>
         </body> 
     </div>
 </html>
