--- a/contactme.html
+++ b/contactme.html
@@ -11,7 +11,7 @@
 </div>
     <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
         <body>
-            <div class="d-flex flex-column align-items-center font-style">
+            <div class="d-flex flex-column align-items-center font-style global-text-style">
                 <p>Hello , for any queries, you can contact me at</p>
                 <p>Email: tarunya7934@gmail.com</p>
                 <p>Phone Number: 78323457348</p>
