--- a/contactme.html
+++ b/contactme.html
@@ -9,7 +9,7 @@
         <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
     </div>
 </div>
-    <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
+    <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100">
         <body>
             <div class="d-flex flex-column align-items-center  global-text-style">
                 <p>Hello , for any queries, you can contact me at</p>
