--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,8 @@
 <div class=ca>
     <div class="d-flex justify-content-around pt-2">
         <a href="index.html"><div class="tab"><p>Home</p></div></a>
-        <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
-        <a href="#"><div class="tab"><p>Contact me</p></div></a>
+        <a href="#"><div class="tab"><p>About me</p></div></a>
+        <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
         <a href="mygallery.html"><div class="tab"><p>My Gallery</p></div></a>
     </div>
 </div>
@@ -14,7 +14,7 @@
           
             <div>
                 <h1 class="d-flex justify-content-center"><strong>About Me</strong></h1><br>
-                <p class="d-flex justify-content-center align-items-center text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
+                <p class="d-flex justify-content-center align-items-center global-text-style">Hi there! I am Tarunya.I am studying B.Tech 4th year in BVRIT. Currently, I am interning with Zemoso Technologies</p>
             </div>
         </body> 
     </div>
