--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <body>
             <div class="d-flex flex-column align-items-center font-style">
                 <h3><span>Welcome</span> to my Website</h3><br>
-                <p>To know more about me, go through the website..contact me for any queries.</p>
+                <p class=global-text-style>To know more about me, go through the website..contact me for any queries.</p>
             </div>
         </body> 
     </div>
