--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div style="background-image: url('wavy-blue-glitter.jpg');" class="textColor h-100 p-5">
         <body>
             <div class="d-flex flex-column align-items-center font-style">
-                <h3><span>Welcome</span> to my Website</h3><br>
+                <h3 style="font-size: xxx-large">Welcome to my Website</h3><br>
                 <p class=global-text-style>To know more about me, go through the website..contact me for any queries.</p>
             </div>
         </body> 
