--- a/mygallery.html
+++ b/mygallery.html
@@ -1,11 +1,13 @@
 
 <html>
+    <div class=ca>
     <div class="d-flex justify-content-around pt-2">
         <a href="index.html"><div class="tab"><p>Home</p></div></a>
         <a href="aboutme.html"><div class="tab"><p>About me</p></div></a>
         <a href="contactme.html"><div class="tab"><p>Contact me</p></div></a>
         <a href="#"><div class="tab"><p>My Gallery</p></div></a>
     </div>
+</div>
 
     <body class="body">
         <link type="text/css" rel="stylesheet" href="style.css"/>
