--- a/mygallery.html
+++ b/mygallery.html
@@ -13,7 +13,7 @@
         <link type="text/css" rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-        <div class="center">
+        <div class="center transparent">
 			<h3><div class="d-flex justify-content-center align-items-center pt-3">Gallery</div></h3>
 		</div>	
     </div>
