--- a/mygallery.html
+++ b/mygallery.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
         <div class="center">
-			<h3><div class="d-flex justify-content-center align-items-center pt-3">Gallery</div></h3>
+			<h3><div class="d-flex justify-content-center align-items-center pt-3 font">Gallery</div></h3>
 		</div>	
     </div>
 			<div class="row p-5">
